working withou tests yet

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,41 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
-  Hi {{ user.username }}!
 
-    <p><a href="{% url 'logout' %}">Log Out</a></p>
-    <p><a href="{% url 'password_reset' %}">Reset Password</a></p>
+    <nav class="navbar bg-light">
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">My Exercise Planner!</span>
+          <p><a href="{% url 'logout' %}">Log Out</a></p>
+      </div>
+    </nav>
+
+    <div class="col-sm-25 offset-1 text-center py-3 px-3">
+         <h2>{{ welcome_object }}</h2>
+
+         {% if user.is_authenticated %}
+             <h2>Hi {{ user.username }}!</h2>
+    </div>
+
+ <div id="wrapper">
+  <div class="row">
+   <div class="col-sm-4 mb-3 mb-sm-4">
+    <div class="card" style="width: 25rem;">
+        {% load static %}
+     <img src="{% static "images/healthy_lifestyle_yoga.jpg" %}" class="card-img-top" style="height:300px" alt="Exercise Planner">
+       <div class="card-body">
+       <h5 class="card-title">EXERCISE PLANNER</h5>
+       <p class="card-text">Lets start a new day on the right way!</p>
+         <a href="{% url 'exercise:postExercise' user.id %}" class="btn btn-primary">Add a new exercise plan</a>
+         <a href="{% url 'exercise:exercises' user.id %}" class="btn btn-success">My plans</a>
+       </div>
+     </div>
+  </div>
+ </div>
+ </div>
+
+<br>
+
+
 
 {% else %}
   <p>You are not logged in</p>
