--- a/templates/Registration/login.html
+++ b/templates/Registration/login.html
@@ -7,6 +7,9 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
+
+     <p><a href="{% url 'password_reset' %}">Reset Password</a></p>
+
   <button type="submit">Log In</button>
 </form>
 {% endblock %}
