--- a/templates/base.html
+++ b/templates/base.html
@@ -5,24 +5,36 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Exercise Planner{% endblock %}</title>
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+     {#     link to bootstrap #}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+     {#calls the title of the page or if none, uses Exercise Planer as default#}
+    <title>{% block title %}Exercise Planner{% endblock %}</title>
 </head>
 
 <body>
 
-<nav>
-     <img src="{% static '' %}" alt="Sample website logo">
-</nav>
+{# code to display message when the creation of the plan was successful (it only exists once) #}
+    {% if messages %}
+        {% for message in messages %}
+           <div class="bg-{% if message.tags %}{{ message.tags }}
+            {% else  %}Success{% endif %}
+           bg-gradient text-center text-white py-4">
+             {{ message }}
+           </div>
+        {% endfor %}
+    {% endif %}
+
+
   <main>
     {% block content %}
     {% endblock %}
   </main>
-
+<br>
  <footer>
    © 2023 Exercise Planner. All rights reserved.
   </footer>
-
+{# link to bootstrap JS #}
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
-
 </html>
